--- a/red-lan-taller.yml
+++ b/red-lan-taller.yml
@@ -3,16 +3,15 @@ name: labtaller
 topology:
   nodes:
   
-    router-cisco:
+    swith-core:
       kind: cisco_iol
       image: docker.io/arthurk99/cisco-iol:17.15.01 
       startup-config: configs/config.partial
              
-    switch-nokia:
-      kind: nokia_srlinux
-      image: ghcr.io/nokia/srlinux:24.10.1
-      type: ixrd3
-      startup-config: switch/switch.cfg
+    switch-acceso:
+      kind: cisco_iol
+      image: docker.io/arthurk99/cisco-iol-l2:17.15.01
+      startup-config: configs/config.partial
 
     PC1:
       kind: linux # "Alpine Linux v3.12"
@@ -46,10 +45,10 @@ topology:
            
 
   links:
-    - endpoints: ["router-cisco:Ethernet0/1","switch-nokia:e1-1"]    
-    - endpoints: ["PC1:eth1","switch-nokia:e1-2"]
+    - endpoints: ["switch-core:Ethernet0/1","switch-acceso:Ethernet0/1"]    
+    - endpoints: ["PC1:eth1","switch-acceso:Ethernet0/2"]
       mtu: 1500
-    - endpoints: ["PC2:eth1","switch-nokia:e1-3"]
+    - endpoints: ["PC2:eth1","switch-acceso:Ethernet0/3"]
       mtu: 1500
-    - endpoints: ["PC3:eth1","switch-nokia:e1-4"]
+    - endpoints: ["PC3:eth1","switch-acceso:Ethernet0/4"]
       mtu: 1500      
