--- a/red-lan-taller.yml
+++ b/red-lan-taller.yml
@@ -3,7 +3,7 @@ name: labtaller
 topology:
   nodes:
   
-    swith-core:
+    switch-core:
       kind: cisco_iol
       image: docker.io/arthurk99/cisco-iol:17.15.01 
       startup-config: configs/config.partial
