--- a/red-lan-taller.yml
+++ b/red-lan-taller.yml
@@ -6,12 +6,12 @@ topology:
     switch-core:
       kind: cisco_iol
       image: docker.io/arthurk99/cisco-iol-l2:17.15.01
-      startup-config: configs/config.partial
+      #startup-config: configs/config.partial
              
     switch-acceso:
       kind: cisco_iol
       image: docker.io/arthurk99/cisco-iol-l2:17.15.01
-      startup-config: configs/config.partial
+      #startup-config: configs/config.partial
 
     PC1:
       kind: linux # "Alpine Linux v3.12"
