--- a/red-lan-taller.yml
+++ b/red-lan-taller.yml
@@ -8,11 +8,10 @@ topology:
       image: docker.io/arthurk99/cisco-iol:17.15.01
       #startup-config: configs/config.partial
              
-    switch-acceso:
-      kind: cisco_iol
-      image: docker.io/arthurk99/cisco-iol-l2:17.15.01
-      type: l2
-      startup-config: switch/config.partial
+    switch-arista:
+      kind: arista_ceos
+      image: docker.io/arthurk99/arista-ceos:4.30.2F
+      #startup-config: switch/config.partial
 
     PC1:
       kind: linux # "Alpine Linux v3.12"
