--- a/red-lan-taller.yml
+++ b/red-lan-taller.yml
@@ -11,7 +11,7 @@ topology:
     switch-arista:
       kind: arista_ceos
       image: docker.io/arthurk99/arista-ceos:4.30.2F
-      #startup-config: switch/myconfig.conf
+      startup-config: switch/myconfig.conf
 
     PC1:
       kind: linux # "Alpine Linux v3.12"
