--- a/switch/myconfig.conf
+++ b/switch/myconfig.conf
@@ -8,11 +8,19 @@ provider eos-native
 exit
 vlan 10
 exit
+dhcp server
+subnet 10.0.0.0/24
+range 10.0.0.20 10.0.0.250
+default-gateway 10.0.0.10
+name subnet10
+exit
+exit
 interface vlan 10
 ip address 10.0.0.10 255.255.255.0
+dhcp server ipv4
 no shutdown
 exit
-interface ethernet 2-6
+interface ethernet 2
 switchport mode access
 switchport access vlan 10
 no shutdown
