--- a/switch/myconfig.conf
+++ b/switch/myconfig.conf
@@ -6,23 +6,45 @@ no shutdown
 exit
 provider eos-native
 exit
-vlan 10
+vlan 10,11
 exit
 dhcp server
-subnet 10.0.0.0/24
-range 10.0.0.20 10.0.0.250
-default-gateway 10.0.0.10
+subnet 10.10.0.0/24
+range 10.10.0.20 10.10.0.250
+default-gateway 10.10.0.10
 name subnet10
 exit
 exit
+dhcp server
+subnet 10.11.0.0/24
+range 10.11.0.20 10.11.0.250
+default-gateway 10.11.0.10
+name subnet11
+exit
+exit
 interface vlan 10
-ip address 10.0.0.10 255.255.255.0
+ip address 10.10.0.10 255.255.255.0
+dhcp server ipv4
+no shutdown
+exit
+interface vlan 11
+ip address 10.11.0.10 255.255.255.0
 dhcp server ipv4
 no shutdown
 exit
 interface ethernet 2
 switchport mode access
 switchport access vlan 10
+no shutdown
+exit
+interface ethernet 3
+switchport mode access
+switchport access vlan 11
+no shutdown
+exit
+interface ethernet 4
+switchport mode access
+switchport access vlan 11
 no shutdown
 exit
 interface ethernet 1
