--- a/red-lan-taller.yml
+++ b/red-lan-taller.yml
@@ -22,6 +22,7 @@ topology:
        - chmod +x /root/dhcp-client.sh
        - bash /root/dhcp-client.sh
        - ip -6 route del default dev eth0
+       - ip route del default dev eth0
             
     PC2:
       kind: linux # "Alpine Linux v3.12"
