--- a/red-lan-taller.yml
+++ b/red-lan-taller.yml
@@ -52,7 +52,9 @@ topology:
       exec:
        - ip addr add 192.168.2.100/24 dev eth1
        - ip route del default dev eth0
-       - ip route add default via 192.168.2.1   
+       - ip route add default via 192.168.2.1
+      binds:
+       - configs/tallerclab.html:/var/www/localhost/htdocs/index.html
            
 
   links:
